--- a/index.html
+++ b/index.html
@@ -921,6 +921,36 @@ En quoi votre compréhension actuelle diffère-t-elle de vos idées initiales?
 5. **Points de levier**: Certaines interventions ont plus d'impact que d'autres
 
 <aside class="notes"><p>Ces principes systémiques transcendent le cas particulier de la ségrégation scolaire et peuvent être transférés à d&#39;autres systèmes.</p>
+</div></aside></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" -->
+<div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
+
+## Crédits et licence
+
+<aside class="notes"><h2 id="crédits-et-licence">Crédits et licence</h2>
+<h3 id="auteur">Auteur</h3>
+<p>Nathanaël Friant </p>
+<p>Développement assisté par Claude 3.7 Sonnet (Anthropic, 2025)</p>
+<h3 id="licence">LICENCE</h3>
+<p>Attribution-NonCommercial-ShareAlike 4.0 International
+CC BY-NC-SA 4.0</p>
+<p>Canonical URL <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">https://creativecommons.org/licenses/by-nc-sa/4.0/</a></p>
+<p>See the legal code</p>
+<p>You are free to:</p>
+<ul>
+<li>Share — copy and redistribute the material in any medium or format</li>
+<li>Adapt — remix, transform, and build upon the material</li>
+</ul>
+<p>The licensor cannot revoke these freedoms as long as you follow the license terms.</p>
+<p>Under the following terms:</p>
+<ul>
+<li>Attribution — You must give appropriate credit , provide a link to the license, and indicate if changes were made . You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.</li>
+<li>NonCommercial — You may not use the material for commercial purposes .</li>
+<li>ShareAlike — If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.</li>
+<li>No additional restrictions — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.</li>
+</ul>
+<p>Notices:</p>
+<p>You do not have to comply with the license for elements of the material in the public domain or where your use is permitted by an applicable exception or limitation .</p>
+<p>No warranties are given. The license may not give you all of the permissions necessary for your intended use. For example, other rights such as publicity, privacy, or moral rights may limit how you use the material.</p>
 </div></aside></script></section></div>
     </div>
 
